// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div
  class="App"
>
  <div
    class="Welcome"
  >
    <div
      class="Welcome-Jumbo"
    >
      <h1>
        Welcome to Polyswarm,
      </h1>
      <h2>
        The first 
        <em>
          decentralized
        </em>
         antivirus marketplace.
      </h2>
      <p>
        Simply upload files to create your own bounties and then let the microengines on Polyswarm analyze your file.
      </p>
      <button
        class="Button"
      >
        Get Started!
      </button>
    </div>
  </div>
</div>
`;

exports[`shows BountyInfo when at least one bounty & active is negative 1`] = `
<App>
  <div
    className="App"
  >
    <Modal
      message=""
      title="Error: Failed to Post Bounty"
    >
      <div
        className="Modal"
      />
    </Modal>
    <Sidebar
      active={-1}
      bounties={
        Array [
          Object {
            "guid": "asdf",
          },
        ]
      }
      remove={[Function]}
      select={[Function]}
    >
      <div
        className="Sidebar"
      >
        <header
          className="Sidebar-Header"
        >
          <img
            alt="Polyswarm logo"
            src="../public/img/polyswarm.svg"
          />
        </header>
        <ul
          className="Sidebar-Content"
        >
          <ListItem
            active={false}
            className="item-0"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <li
              className="ListItem"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div>
                <span
                  className="ListItem-Child"
                  onClick={[Function]}
                >
                  asdf
                </span>
              </div>
            </li>
          </ListItem>
        </ul>
      </div>
    </Sidebar>
    <Header
      create={true}
      onClick={[Function]}
      title="Create a Bounty"
    >
      <header
        className="Header"
      >
        <h3>
          Create a Bounty
        </h3>
      </header>
    </Header>
    <div
      className="App-Content"
    >
      <BountyCreate
        addBounty={[Function]}
        isUnlocked={false}
        onError={[Function]}
        onWalletChange={[Function]}
        url="http://localhost:8080"
        walletList={Array []}
      >
        <div
          className="Bounty-Create"
        >
          <ModalPassword
            onWalletChange={[Function]}
            url="http://localhost:8080"
            walletList={Array []}
          >
            <div
              className="ModalPassword"
            />
          </ModalPassword>
          <div
            className="Container"
          >
            <FileList
              clear={[Function]}
              files={Array []}
              removeFile={[Function]}
            >
              <div
                className="File-List"
              >
                <header
                  className="File-List-Header"
                >
                  <p
                    className="File-List-Title"
                  >
                    0
                     
                    Files
                  </p>
                  <Button
                    className="Clear-Button"
                    disabled={true}
                    onClick={[Function]}
                  >
                    <button
                      className="Button"
                      disabled={true}
                      onClick={[Function]}
                    >
                      - Clear
                    </button>
                  </Button>
                </header>
                <ul
                  className="List"
                />
              </div>
            </FileList>
            <DropTarget
              onFilesSelected={[Function]}
            >
              <div
                className="Drop-Target"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
              >
                <div>
                  <p>
                    Drag and drop your files here, or 
                  </p>
                  <FileButton
                    onFileSelected={[Function]}
                  >
                    <form>
                      <input
                        className="hidden"
                        id="file"
                        multiple={true}
                        onChange={[Function]}
                        type="file"
                      />
                      <label
                        htmlFor="file"
                      >
                        click here.
                      </label>
                    </form>
                  </FileButton>
                </div>
              </div>
            </DropTarget>
            <Button
              className="Bounty-Create-Upload"
              disabled={true}
              onClick={[Function]}
            >
              <button
                className="Button"
                disabled={true}
                onClick={[Function]}
              >
                Create Bounty
              </button>
            </Button>
          </div>
        </div>
      </BountyCreate>
    </div>
  </div>
</App>
`;

exports[`shows BountyInfo when at least one bounty & active selects it 1`] = `
<App>
  <div
    className="App"
  >
    <Modal
      message=""
      title="Error: Failed to Post Bounty"
    >
      <div
        className="Modal"
      />
    </Modal>
    <Sidebar
      active={0}
      bounties={
        Array [
          Object {
            "guid": "asdf",
          },
        ]
      }
      remove={[Function]}
      select={[Function]}
    >
      <div
        className="Sidebar"
      >
        <header
          className="Sidebar-Header"
        >
          <img
            alt="Polyswarm logo"
            src="../public/img/polyswarm.svg"
          />
        </header>
        <ul
          className="Sidebar-Content"
        >
          <ListItem
            active={true}
            className="item-0"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <li
              className="ListItem active"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div>
                <span
                  className="ListItem-Child"
                  onClick={[Function]}
                >
                  asdf
                </span>
              </div>
            </li>
          </ListItem>
        </ul>
      </div>
    </Sidebar>
    <Header
      create={false}
      onClick={[Function]}
      title="asdf"
    >
      <header
        className="Header"
      >
        <h3>
          asdf
        </h3>
        <Button
          className="Header-Button"
          onClick={[Function]}
        >
          <button
            className="Button"
            onClick={[Function]}
          >
            + Bounty
          </button>
        </Button>
      </header>
    </Header>
    <div
      className="App-Content"
    >
      <BountyInfo
        bounty={
          Object {
            "guid": "asdf",
          }
        }
      >
        <div
          className="Bounty-Info"
        >
          <div
            className="Bounty-Info-Container"
          >
            <FileList
              active={0}
              className="Bounty-Info-Files"
              files={Array []}
              onClick={[Function]}
              readonly={true}
            >
              <div
                className="File-List"
              >
                <header
                  className="File-List-Header"
                >
                  <p
                    className="File-List-Title"
                  >
                    0
                     
                    Files
                  </p>
                </header>
                <ul
                  className="List"
                />
              </div>
            </FileList>
            <AssertionTable
              assertions={Array []}
              className="Bounty-Info-Assertions"
            >
              <table
                className="AssertionTable"
              >
                <thead>
                  <tr>
                    <th>
                      Author
                    </th>
                    <th>
                      Verdict
                    </th>
                    <th>
                      Metadata
                    </th>
                    <th>
                      Bid
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
            </AssertionTable>
          </div>
        </div>
      </BountyInfo>
    </div>
  </div>
</App>
`;

exports[`shows create when no bounties found 1`] = `null`;
